# ThousandsBallot

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
.github/workflows/: build.yml  test.yml
include/decrypt/: decrypt_tlwe.hpp
include/encrypt/: encrypt_tlwe.hpp
include/factory/: modulus_factory.hpp  multiplication_factory.hpp  multiplication_method_manager.hpp
include/measure/: polynomial_multiplication_measure.hpp
include/method/: multiplication_method.hpp  multiplication_strategy.hpp  naive_multiplication_method.hpp  naive_multiplication_strategy.hpp  ntt_multiplication_method.hpp  ntt_multiplication_strategy.hpp
include/modulus/: mersenne_modulus.hpp  modulus_wrapper.hpp  naive_modulus.hpp
include/operator/: Montgomery.hpp  ntt.hpp
include/params/: nttparams.hpp  params.hpp  strategy.hpp
include/solver/: solver_tlwe.hpp
include/strategy/: mersenne_modulus_strategy.hpp  modulus_strategy.hpp  multiplication_strategy.hpp  naive_modulus_strategy.hpp  naive_multiplication_strategy.hpp  ntt_multiplication_strategy.hpp
include/structure/: discrete_torus_galoisfield.hpp  discrete_torus_galoisfield_poly.hpp  galoisfield.hpp  galoisfield_poly.hpp  galoisfieldpoly.hpp  int_poly.hpp  intpoly.hpp  poly.hpp  poly_base.hpp  tlwe.hpp  torus.hpp  torus_poly.hpp  toruspoly.hpp  trlwe.hpp
include/utility/: chronotimer.hpp  extendedEuclidean.hpp  log.hpp  parser.hpp  stopwatch.hpp
network/: client.cpp  server.cpp
params/: params.hpp
src/benchmark/: benchmark_toruspoly.cpp
src/factory/: modulus_factory.cpp  multiplication_factory.cpp
src/measure/: testcase_polymul.cpp
src/method/: naive_multiplication_strategy.cpp  ntt_multiplication_strategy.cpp
src/modulus/: mersenne_modulus_strategy.cpp  naive_modulus_strategy.cpp
src/operator/: Montgomery.cpp  ntt.cpp
src/params/: nttparams.cpp  params.cpp
src/strategy/: mersenne_modulus_strategy.cpp  modulus_strategy.cpp  naive_modulus_strategy.cpp  naive_multiplication_strategy.cpp  ntt_multiplication_strategy.cpp
src/structure/: galoisfield.cpp  galoisfieldpoly.cpp  intpoly.cpp  poly_base.tpp  torus.cpp  toruspoly.cpp
src/test/: test_montgomerymul.cpp
